--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-<h1>404</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="public/style/style.css">
+    <script src="https://kit.fontawesome.com/c25abe3fb5.js"></script>
+    <title>About me</title>
+</head>
+<body>
+    <img id="me" src="public/images/me.jpg" alt="">
+    <h1>Gabriel Oliveira</h1>
+    <h2>just someone who loves to program</h2>
+    <div>
+        <button onmouseover="mostrar('github')" onmouseout="ocultar('github')">
+            <i class="fab fa-github"></i>
+            <a id="github" id="github" href="https://github.com/gabriel4g" target="_blank">Github</a>
+        </button>
+        
+        <button onmouseover="mostrar('twitter')" onmouseout="ocultar('twitter')">
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+            <a id="twitter" href="https://twitter.com/gabolSK" target="_blank">Twitter</a>
+        </button>
+        <button onmouseover="mostrar('instagram')" onmouseout="ocultar('instagram')">
+            <i class="fa fa-instagram" aria-hidden="true"></i>
+            <a id="instagram" href="https://www.instagram.com/gabol.sk8/" target="_blank">Instagram</a>
+        </button>
+        <button onmouseover="mostrar('bitbucket')" onmouseout="ocultar('bitbucket')">
+            <i class="fab fa-bitbucket"></i>
+            <a id="bitbucket" href="https://bitbucket.org/gablucena/" target="_blank">Bitbucket</a>
+        </button>
+    </div>
+    <script src="public/js/function.js"></script>
+</body>
+</html>
