--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
             background-color: #f1f1f1;
         }
 
+        img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 6%;
+            margin-bottom: -6%;
+        }
+
         @media only screen and (max-width: 600px) {
             .texto {
                 width: 22em; 
@@ -39,6 +47,8 @@
 </head>
 <body>
     <div class="container">
+        <img src="public/images/me.jpg" alt="me" width="150" height="150"
+                style="border-radius: 50%;">
         <div class="shadow p-3 mb-5 bg-white rounded" style="margin-top: 25vh;">
             <h2 style="font-weight: bolder;">Gabriel Oliveira</h2>
             <div style="float: right; margin: -26pt 0 ;">
@@ -52,9 +62,7 @@
                 </a>
             </div>
             <hr>
-            <img src="public/images/me.jpg" alt="me" width="150" height="150"
-                style="border-radius: 50%;">
-            <div style="float: right; text-align: right; ">
+            <div>
                 <dt><b>Atualmente</b></dt>
                 <dd class="principal">
                     Atualmente estou desenvolvendo meu projeto particular, 
