--- a/index.html
+++ b/index.html
@@ -29,10 +29,18 @@
                 width: 14em; 
                 word-wrap: normal;
             }
+
+            img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 6%;
+            margin-bottom: -16%;
+        }
         }
 
         i {
-            margin-right: 4pt;
+            margin-right: 2pt;
             padding: 4pt;
         }
         
