--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
         <div class="shadow p-3 mb-5 bg-white rounded" style="margin-top: 25vh;">
             <h2 style="font-weight: bolder;">Gabriel Oliveira</h2>
             <div style="float: right; margin: -26pt 0 ;">
-                <a href="" >
+                <a href="https://www.linkedin.com/in/gabriel4g/" target="_blank">
                     <i class="fab fa-linkedin"></i>
                     linkedIn
                 </a>
-                <a href="">
+                <a href="https://github.com/gabriel4g" target="_blank">
                     <i class="fab fa-github"></i>
                     github
                 </a>
@@ -74,7 +74,7 @@
                 <dt><b>Atualmente</b></dt>
                 <dd class="principal">
                     Atualmente estou desenvolvendo meu projeto particular, 
-                    <a href="https://github.com/gabriel4g/chat-pipoca">chat-pipocaJS</a>.
+                    <a target="_blank" href="https://github.com/gabriel4g/chat-pipoca">chat-pipocaJS</a>.
                 </dd>
                 <dt><b>Cidade</b></dt>
                 <dd>Cabo de Santo agostinho - PE.</dd>
@@ -96,6 +96,46 @@
                 JavaScript, tendo em mente que estudar outras tecnologias vai atrapalhar meu aprendizado, 
                 pretendo manter 100% dos objetivos em JS e futuramente ciente e seguro, irei abrir a porta
                 para novas tecnlogias.
+
+            </dd>
+            <dt><b>Tecnlogias</b></dt>
+            <dd>
+                JavaScript, TypeScript, nodejs, framework adonisJS, BootStrap, MySQL/MariaDB e postgreSQL.
+            </dd>
+        </div>
+    </div>
+    <div class="shadow p-3 mb-5 bg-white rounded" style="margin-top: 2%;">
+        <h2 style="font-weight: bolder;">Projetos atuais</h2>
+        <hr>
+        <div class="texto">
+            <dt>
+                <b>Chat-pipocaJS - 
+                    <a target="_blank" href="https://github.com/gabriel4g/chat-pipoca">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a target="_blank" href="https://chat-pipoca.herokuapp.com/">
+                        <i class="fas fa-link"></i>
+                    </a>
+                </b>
+            </dt>
+            <dd>
+                Chat-pipocaJS é uma recriação que estou fazendo de uma comunidade antiga escrita em php
+                estou recriando todo o código do zero, a primeira versão 0.0.1 estava sendo feita com adonisjs 4.1,
+                mas resolvi migrar para a versão 5 preview com TypeScript e acompanhar as novas atualizações do aodnisjs
+                até o lançamento da sua versão final.
+            </dd>
+            <dt>
+                <b>Url-Shortener -
+                    <a href="https://github.com/gabriel4g/url-shortener">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </b>
+            </dt>
+            <dd>
+                O encurtador de url é um projeto que tive bastante interesse de criar, me senti desafiado a faze-lo
+                coloquei todo o desenvolvendo em prática, seu desenvolvendo é com o framework adonisjs v4.1 e pretendo manter nesta versão a longo prazo
+                , futuramente atualizado para a nova versão do adonis, o inicio do projeto foi bem peculiar, não
+                tinha mínima noção algo que veio como um desafio e por isso pretendo mante-lo atualizado.
 
             </dd>
             <dt><b>Tecnlogias</b></dt>
