--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <dd>
                 Chat-pipocaJS é uma recriação que estou fazendo de uma comunidade antiga escrita em php
                 estou recriando todo o código do zero, a primeira versão 0.0.1 estava sendo feita com adonisjs 4.1,
-                mas resolvi migrar para a versão 5 preview com TypeScript e acompanhar as novas atualizações do aodnisjs
+                mas resolvi migrar para a versão 5 preview com TypeScript e acompanhar as novas atualizações do adonisjs
                 até o lançamento da sua versão final.
             </dd>
             <dt>
