--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
         i {
             margin-right: 2pt;
+            margin-top: 4%;
             padding: 4pt;
         }
         
@@ -59,16 +60,6 @@
                 style="border-radius: 50%;">
         <div class="shadow p-3 mb-5 bg-white rounded" style="margin-top: 25vh;">
             <h2 style="font-weight: bolder;">Gabriel Oliveira</h2>
-            <div style="float: right; margin: -26pt 0 ;">
-                <a href="https://www.linkedin.com/in/gabriel4g/" target="_blank">
-                    <i class="fab fa-linkedin"></i>
-                    linkedIn
-                </a>
-                <a href="https://github.com/gabriel4g" target="_blank">
-                    <i class="fab fa-github"></i>
-                    github
-                </a>
-            </div>
             <hr>
             <div>
                 <dt><b>Atualmente</b></dt>
@@ -79,6 +70,23 @@
                 <dt><b>Cidade</b></dt>
                 <dd>Cabo de Santo agostinho - PE.</dd>
                 
+            </div>
+            <div>
+                <dt><b>Social</b></dt>
+                <div style="float: right; margin: -26pt 0 ;">
+                    <a href="https://www.linkedin.com/in/gabriel4g/" target="_blank">
+                        <i class="fab fa-linkedin"></i>
+                        linkedIn
+                    </a>
+                    <a href="https://github.com/gabriel4g" target="_blank">
+                        <i class="fab fa-github"></i>
+                        github
+                    </a>
+                    <a href="https://twitter.com/gabol4g" target="_blank">
+                        <i class="fab fa-twitter"></i>
+                        twitter
+                    </a>
+                </div>
             </div>
     </div>
     <div class="shadow p-3 mb-5 bg-white rounded" style="margin-top: 2%;">
