--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
 
             img {
             display: block;
-           
+            width: 150px;
+            height: 150px;
             margin-left: auto;
             margin-right: auto;
             margin-top: 6%;
-            margin-bottom: -10%;
+            margin-bottom: 4%;
         }
         }
 
