--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </dt>
             <dd>
                 O encurtador de url é um projeto que tive bastante interesse de criar, me senti desafiado a faze-lo
-                coloquei todo o desenvolvendo em prática, seu desenvolvendo é com o framework adonisjs v4.1 e pretendo manter nesta versão a longo prazo
+                coloquei todo o desenvolvimento em prática, seu desenvolvendo é com o framework adonisjs v4.1 e pretendo manter nesta versão a longo prazo
                 , futuramente atualizado para a nova versão do adonis, o inicio do projeto foi bem peculiar, não
                 tinha mínima noção algo que veio como um desafio e por isso pretendo mante-lo atualizado.
 
